# weather_mvp

./: .bandit  .gitignore  Makefile  README.md  docker-compose.yml
back_end/main_service/: .env.example  Makefile  manage.py  pyproject.toml
back_end/main_service/common/: models.py  snippets.py
back_end/main_service/common/tests/: test_snippets.py
back_end/main_service/core/: models.py  serializers.py  urls.py  views.py
back_end/main_service/core/migrations/: 0001_initial.py
back_end/main_service/main_service/: asgi.py  celery.py  celerybeat_schedule.py  settings.py  urls.py  wsgi.py
back_end/main_service/main_service/settings/: base.py  production.py  test.py
back_end/openai_service/: .env.example  Dockerfile  Makefile  manage.py  pyproject.toml
back_end/openai_service/common/: routes.py  serializers.py  snippets.py
back_end/openai_service/common/tests/: test_playlist.py
back_end/openai_service/core/: models.py  serializers.py  tasks.py  urls.py  views.py
back_end/openai_service/core/migrations/: 0001_initial.py
back_end/openai_service/core/tests/: test_openia_api.py
back_end/openai_service/openai_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
back_end/openai_service/openai_service/settings/: base.py  local.example
back_end/weather_api_service/: .env.example  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
back_end/weather_api_service/common/: snippets.py  urls.py  views.py
back_end/weather_api_service/core/: models.py  routes.py  serializers.py  tasks.py  urls.py  views.py
back_end/weather_api_service/core/migrations/: 0001_initial.py
back_end/weather_api_service/core/tests/: test_api_connect.py  test_views.py
back_end/weather_api_service/weather_api_service/: asgi.py  celery.py  urls.py  wsgi.py
back_end/weather_api_service/weather_api_service/settings/: base.py  test.py
